@@ -2050,6 +2050,26 @@ TestX mixinTest -proc run {{n 10}} {
     o destroy
 }
 
+@ TestX procsearchTest {
+  description {
+    Regression test for procsearch
+  }
+}
+TestX procsearchTest -proc run {{n 10}} {
+
+  Class M -instproc foo args {puts m;next}
+  Object o -mixin M -proc foo args {puts o;next}
+  ::errorCheck [o procsearch foo] "::M instproc foo" "mixin before proc in procsearch"
+  M destroy
+  o destroy
+
+  Class CC -instproc foo args {puts CC;next}
+  CC create c -proc foo args {puts c;next} 
+  ::errorCheck [c procsearch foo] "::c proc foo" "proc before instproc in procsearch"
+  CC destroy
+  c destroy
+}
+
 
 @ TestX mixinInheritanceTest {
   description {
